finish product-demo

--- a/product-demo/sass/abstracts/_variables.scss
+++ b/product-demo/sass/abstracts/_variables.scss
@@ -4,6 +4,10 @@ $default-font-size: 1.9rem;
 $large-font-size: 2.2rem;
 $primary-font-size: 5.4rem;
 $secondary-font-size: 4.0rem;
+$feature-font-size: 3.2rem;
+
+$default-font-weight: 100;
+$feature-font-weight: 500;
 
 // COLOR
 $color-dark-grey: #303c3c;
@@ -11,3 +15,5 @@ $color-white: #fff;
 $color-light-grey: rgb(109, 109, 109);
 $color-lighter-grey: rgb(249, 249, 249);
 $color-light-grey-1:  #ececed;
+
+$border-grey: #d8d8d8;
