--- a/product-demo/css/style.css
+++ b/product-demo/css/style.css
@@ -19,13 +19,63 @@ body {
 .heading-secondary {
   font-size: 4rem; }
 
-.description {
+.heading-primary-sub {
   font-size: 1.6rem;
-  margin-top: 0.6rem;
-  color: #6d6d6d; }
+  color: #6d6d6d;
+  font-weight: 100; }
+
+.description {
+  font-size: 1.9rem;
+  color: #6d6d6d;
+  font-weight: 100; }
+
+.description--white {
+  font-size: 1.9rem;
+  color: #f9f9f9;
+  font-weight: 100; }
+
+.heading-feature {
+  font-size: 3.2rem;
+  font-weight: 500;
+  border-bottom: 0.1rem #303c3c solid;
+  background-color: #303c3c;
+  color: white;
+  padding: 1rem; }
+
+.paragraph-feature {
+  font-size: 1.9rem;
+  font-weight: 100;
+  margin: 8%; }
+
+.footer-heading {
+  font-size: 1.9rem;
+  font-weight: 100;
+  line-height: 3.2rem; }
+
+.u-margin-top-18 {
+  margin-top: 18rem; }
+
+.u-margin-top-1 {
+  margin-top: 1.1rem; }
+
+.u-padding-bt-1 {
+  padding-bottom: 1.0rem; }
+
+.u-margin-bt-2 {
+  margin-bottom: 2rem; }
+
+.u-margin-top-0 {
+  margin-top: 0.6rem; }
+
+.u-bg-dark {
+  background-color: #303c3c;
+  color: white; }
+
+.u-margin-side-10 {
+  margin-left: 10rem;
+  margin-right: 10rem; }
 
 .btn {
-  margin-top: 1.5rem;
   color: #303c3c;
   background-color: transparent;
   font-size: 1.9rem;
@@ -33,13 +83,49 @@ body {
   border: #303c3c solid 0.05rem;
   border-radius: 0.2rem;
   padding: 1rem;
-  transition: all .3s; }
+  transition: all .3s;
+  min-width: 14rem; }
   .btn:hover {
     color: #ececed;
     background-color: #303c3c;
     cursor: pointer; }
   .btn:active {
     background-color: #445252; }
+  .btn--active {
+    background-color: #445252;
+    color: white; }
+
+.card {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 80%;
+  border: 0.1rem #303c3c solid;
+  border-radius: 0.5rem; }
+
+.row {
+  display: block;
+  height: 70vh;
+  text-align: center; }
+
+.col-4 {
+  position: relative;
+  height: 100%;
+  width: 40%;
+  float: left; }
+
+.col-6 {
+  position: relative;
+  height: 100%;
+  width: 60%;
+  float: left; }
+
+.col-3 {
+  position: relative;
+  height: 100%;
+  width: 33.3%;
+  float: left; }
 
 .nav {
   margin-top: 1rem;
@@ -92,6 +178,10 @@ body {
       transform: scaleX(0);
       -webkit-transition: all 0.3s ease-in-out 0s;
       transition: all 0.3s ease-in-out 0s; }
+    .nav-item .nav-link:active:before {
+      visibility: visible;
+      -webkit-transform: scaleX(0.7);
+      transform: scaleX(0.7); }
   .nav-item--right {
     float: right; }
 
@@ -110,3 +200,31 @@ body {
   text-align: center;
   padding-top: 4rem;
   padding-bottom: 4rem; }
+
+.product-text-box {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 70%; }
+
+.product-image {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); }
+
+.footer {
+  display: block;
+  height: 23vh;
+  text-align: center;
+  background-color: #f9f9f9;
+  padding: 1rem 10rem; }
+
+.footer-link {
+  text-decoration: none;
+  font-size: 1.6rem;
+  line-height: 2.2rem;
+  color: #303c3c;
+  font-weight: 100; }
+  .footer-link:hover {
+    text-decoration: underline; }
