--- a/product-demo/sass/main.scss
+++ b/product-demo/sass/main.scss
@@ -2,7 +2,11 @@
 
 @import "bases/base";
 @import "bases/typography";
+@import "bases/utilities";
 
 @import "components/button";
+@import "components/cards";
+
+@import "layout/grid";
 
 @import "pages/home";
