--- a/tool-kits/sass/main.scss
+++ b/tool-kits/sass/main.scss
@@ -4,6 +4,7 @@
 @import "bases/typography";
 @import "bases/utilities";
 
+@import "components/arrow";
 @import "components/button";
 @import "components/card";
 @import "components/card-flip";
