--- a/tool-kits/sass/pages/_home.scss
+++ b/tool-kits/sass/pages/_home.scss
@@ -1,9 +1,17 @@
 body {
     background-color: rgb(169, 231, 255);
 }
+
 .container {
-    width: 53%;
+    width: 20%;
     position: absolute;
     left: 50%;
-    transform: translateX(-50%);
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.main {
+    position: absolute;
+    width: 100%;
+    height: 100%;
 }
