--- a/tool-kits/css/style.css
+++ b/tool-kits/css/style.css
@@ -125,7 +125,7 @@ body {
   background-color: #a9e7ff; }
 
 .container {
-  width: 20%;
+  width: 30rem;
   position: absolute;
   left: 50%;
   top: 50%;
