menu bar, nav page, and bug fix

--- a/tool-kits/sass/main.scss
+++ b/tool-kits/sass/main.scss
@@ -8,5 +8,6 @@
 @import "components/button";
 @import "components/card";
 @import "components/card-flip";
+@import "components/nav-icon";
 
 @import "pages/home";
