--- a/tool-kits/css/style.css
+++ b/tool-kits/css/style.css
@@ -24,9 +24,9 @@ body {
   top: 50%;
   transition: .2s; }
   .arrow--left {
-    left: 4rem; }
+    left: 5rem; }
   .arrow--right {
-    right: 4rem; }
+    right: 5rem; }
   .arrow:hover {
     transform: scale(1.2);
     cursor: pointer; }
@@ -37,6 +37,7 @@ body {
   font-size: 2rem; }
 
 .card {
+  position: absolute;
   text-align: center;
   box-shadow: 0 0.4rem 0.6rem rgba(0, 0, 0, 0.12), 0 0.4rem 0.6rem rgba(0, 0, 0, 0.24);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
@@ -121,17 +122,73 @@ body {
       left: 50%;
       transform: translate(-50%, -50%); }
 
+.nav-icon {
+  position: absolute;
+  display: inline-block;
+  height: 4rem;
+  width: 4rem;
+  transition: .3s;
+  margin: 5rem;
+  z-index: 3; }
+  .nav-icon:hover {
+    transform: scale(1.15);
+    cursor: pointer; }
+  .nav-icon .menu-icon {
+    display: block;
+    position: absolute;
+    background: #fff;
+    width: 100%;
+    height: 0.6rem;
+    border-radius: 2rem;
+    transition: 0.4s; }
+    .nav-icon .menu-icon:nth-child(1) {
+      top: 0rem; }
+    .nav-icon .menu-icon:nth-child(2) {
+      top: 1.2rem; }
+    .nav-icon .menu-icon:nth-child(3) {
+      top: 2.4rem; }
+
+.change .menu-icon:nth-child(1) {
+  -webkit-transform: rotate(135deg) translate(0, -1.68rem) scale(1.1);
+  transform: rotate(135deg) translate(0, -1.68rem) scale(1.1); }
+
+.change .menu-icon:nth-child(2) {
+  transform: translateX(-3rem);
+  opacity: 0; }
+
+.change .menu-icon:nth-child(3) {
+  -webkit-transform: rotate(-135deg) translate(0, 1.68rem) scale(1.1);
+  transform: rotate(-135deg) translate(0, 1.68rem) scale(1.1); }
+
 body {
   background-color: #a9e7ff; }
 
+.nav {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 20vh; }
+
+.nav-menu-overlay {
+  background-color: #2c2932;
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  height: 0vh;
+  width: 0vw;
+  opacity: 1;
+  border-bottom-right-radius: 100%;
+  transition: 0.6s cubic-bezier(0.39, 0.575, 0.565, 1); }
+
 .container {
   width: 30rem;
+  height: 35rem;
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%); }
 
 .main {
-  position: absolute;
-  width: 100%;
-  height: 100%; }
+  width: 80vw;
+  height: 80vh; }
