--- a/tool-kits/sass/components/_card.scss
+++ b/tool-kits/sass/components/_card.scss
@@ -3,15 +3,13 @@
     // margin-right: 5%;
     // margin-bottom: 5%;
     // width: 40%;
-    // position: absolute;
+    position: absolute;
     // float: left;
     text-align: center;
     box-shadow: $default-box-shadow;
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
     background-color: white;
     // position: absolute;
-    // top: 50%;
-    // left: 50%;
     // transform: translate(-50%, -50%);
 
     &:hover {
