--- a/tool-kits/sass/pages/_home.scss
+++ b/tool-kits/sass/pages/_home.scss
@@ -1,9 +1,31 @@
 body {
     background-color: rgb(169, 231, 255);
+    // padding: 7rem;
+}
+
+.nav {
+    position: relative;
+    display: block;
+    width: 100%;
+    height: 20vh;
+}
+
+.nav-menu-overlay {
+    background-color: rgb(44, 41, 50);
+    position: absolute;
+    z-index: 2;
+    top: 0;
+    left: 0;
+    height: 0vh;
+    width: 0vw;
+    opacity: 1;
+    border-bottom-right-radius: 100%;
+    transition: 0.6s cubic-bezier(0.39, 0.575, 0.565, 1);
 }
 
 .container {
     width: 30rem;
+    height: 35rem;
     position: absolute;
     left: 50%;
     top: 50%;
@@ -11,7 +33,6 @@ body {
 }
 
 .main {
-    position: absolute;
-    width: 100%;
-    height: 100%;
+    width: 80vw;
+    height: 80vh;
 }
