--- a/tool-kits/sass/bases/_typography.scss
+++ b/tool-kits/sass/bases/_typography.scss
@@ -1,6 +1,6 @@
-.heading-primary {
-    font-size: $primary-heading-font-size;
-}
+// .heading-primary {
+//     font-size: $primary-heading-font-size;
+// }
 
 .heading-secondary {
     font-size: $secondary-heading-font-size;
