--- a/tool-kits/sass/components/_card-flip.scss
+++ b/tool-kits/sass/components/_card-flip.scss
@@ -1,10 +1,5 @@
 .card-flip {
-    // margin-left: 5%;
-    // margin-right: 5%;
-    // margin-bottom: 5%;
-    // width: 40%;
-    // float: left;
-    // position: absolute;
+    position: absolute;
     background-color: transparent;
     perspective: 1000px;
 
