--- a/tool-kits/sass/main.scss
+++ b/tool-kits/sass/main.scss
@@ -9,5 +9,6 @@
 @import "components/card";
 @import "components/card-flip";
 @import "components/nav-icon";
+@import "components/pagination";
 
 @import "pages/home";
