--- a/tool-kits/sass/components/_card.scss
+++ b/tool-kits/sass/components/_card.scss
@@ -1,16 +1,9 @@
 .card {
-    // margin-left: 5%;
-    // margin-right: 5%;
-    // margin-bottom: 5%;
-    // width: 40%;
     position: absolute;
-    // float: left;
     text-align: center;
     box-shadow: $default-box-shadow;
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
     background-color: white;
-    // position: absolute;
-    // transform: translate(-50%, -50%);
 
     &:hover {
         box-shadow: $dark-box-shadow;
@@ -52,4 +45,8 @@
         left: 50%;
         transform: translate(-50%, -50%);
     }
+}
+
+.show-cards {
+    transition: .4s;
 }
