--- a/tool-kits/css/style.css
+++ b/tool-kits/css/style.css
@@ -202,10 +202,51 @@ body {
   width: 0vw;
   opacity: 1;
   border-bottom-right-radius: 100%;
-  transition: 0.6s cubic-bezier(0.39, 0.575, 0.565, 1); }
-  .nav-menu-overlay .heading-primary {
-    font-size: 3rem;
-    display: none; }
+  transition: all 0.6s cubic-bezier(0.39, 0.575, 0.565, 1); }
+  .nav-menu-overlay .nav-menu {
+    display: block;
+    position: absolute;
+    top: 47vh;
+    left: 50vw;
+    opacity: 0;
+    z-index: 10;
+    transform: translate(-50%, -50%);
+    transition: all 0.6s cubic-bezier(0.39, 0.575, 0.565, 1);
+    text-align: center;
+    color: white; }
+    .nav-menu-overlay .nav-menu .heading-primary {
+      font-size: 4.5rem;
+      line-height: 10rem; }
+    .nav-menu-overlay .nav-menu .nav-text {
+      font-size: 2.5rem;
+      line-height: 8rem;
+      display: block;
+      position: relative; }
+      .nav-menu-overlay .nav-menu .nav-text:hover {
+        cursor: pointer;
+        color: black;
+        z-index: 12; }
+        .nav-menu-overlay .nav-menu .nav-text:hover:before {
+          visibility: visible;
+          -webkit-transform: scaleX(1);
+          transform: scaleX(1);
+          z-index: -1; }
+      .nav-menu-overlay .nav-menu .nav-text:before {
+        content: "";
+        position: absolute;
+        top: 24%;
+        left: 19.6%;
+        width: 60%;
+        height: 50%;
+        background-color: #fff;
+        visibility: hidden;
+        -webkit-transform: scaleX(0);
+        transform: scaleX(0);
+        -webkit-transition: all .3s ease-in-out 0s;
+        transition: all .3s ease-in-out 0s; }
+      .nav-menu-overlay .nav-menu .nav-text:active:before {
+        -webkit-transform: scaleX(0.8);
+        transform: scaleX(0.8); }
 
 .container {
   width: 30rem;
