--- a/tool-kits/sass/pages/_home.scss
+++ b/tool-kits/sass/pages/_home.scss
@@ -21,6 +21,7 @@ body {
     opacity: 1;
     border-bottom-right-radius: 100%;
     transition: all 0.6s cubic-bezier(0.39, 0.575, 0.565, 1);
+    display: none;
 
     .nav-menu {
         display: block;
