begin design button

--- a/tool-kits/css/style.css
+++ b/tool-kits/css/style.css
@@ -31,7 +31,8 @@ body {
 .btn {
   width: 10rem;
   height: 4rem;
-  font-size: 2rem; }
+  font-size: 2rem;
+  display: none; }
 
 .card {
   position: absolute;
