--- a/tool-kits/css/style.css
+++ b/tool-kits/css/style.css
@@ -29,19 +29,30 @@ body {
     cursor: pointer; }
 
 .btn {
-  width: 10rem;
-  height: 4rem;
+  width: 80%;
+  height: 6rem;
+  top: 50%;
+  left: 50%;
   font-size: 2rem;
-  display: none; }
+  transform: translate(-50%, -50%);
+  position: absolute;
+  transition: all .3s; }
 
 .card {
   position: absolute;
   text-align: center;
   box-shadow: 0 0.4rem 0.6rem rgba(0, 0, 0, 0.12), 0 0.4rem 0.6rem rgba(0, 0, 0, 0.24);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-  background-color: white; }
+  background-color: white;
+  cursor: pointer;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  transform: translate(-50%, -50%); }
   .card:hover {
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22); }
+  .card:active {
+    box-shadow: 0 0.4rem 0.6rem rgba(0, 0, 0, 0.12), 0 0.4rem 0.6rem rgba(0, 0, 0, 0.24); }
   .card__heading {
     font-size: 2rem;
     padding-top: 0.8rem; }
@@ -74,7 +85,12 @@ body {
 .card-flip {
   position: absolute;
   background-color: transparent;
-  perspective: 1000px; }
+  perspective: 1000px;
+  cursor: pointer;
+  width: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); }
   .card-flip--inner--horizontal {
     position: relative;
     width: 100%;
@@ -88,6 +104,8 @@ body {
   .card-flip:hover .card-flip--inner--horizontal {
     transform: rotateY(180deg);
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22); }
+  .card-flip:active .card-flip--inner--horizontal {
+    box-shadow: 0 0.4rem 0.6rem rgba(0, 0, 0, 0.12), 0 0.4rem 0.6rem rgba(0, 0, 0, 0.24); }
   .card-flip--inner--vertical {
     position: relative;
     width: 100%;
@@ -101,6 +119,8 @@ body {
   .card-flip:hover .card-flip--inner--vertical {
     transform: rotateX(180deg);
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22); }
+  .card-flip:active .card-flip--inner--vertical {
+    box-shadow: 0 0.4rem 0.6rem rgba(0, 0, 0, 0.12), 0 0.4rem 0.6rem rgba(0, 0, 0, 0.24); }
   .card-flip__front, .card-flip__back {
     height: 100%;
     width: 100%;
@@ -251,6 +271,7 @@ body {
         transform: scaleX(0.8); }
 
 .container {
+  display: none;
   width: 30rem;
   height: 35rem;
   position: absolute;
