--- a/tool-kits/sass/components/_card.scss
+++ b/tool-kits/sass/components/_card.scss
@@ -4,9 +4,18 @@
     box-shadow: $default-box-shadow;
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
     background-color: white;
+    cursor: pointer;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    transform: translate(-50%, -50%);
 
     &:hover {
         box-shadow: $dark-box-shadow;
+    }
+
+    &:active {
+        box-shadow: $default-box-shadow
     }
 
     &__heading {
