--- a/tool-kits/sass/pages/_home.scss
+++ b/tool-kits/sass/pages/_home.scss
@@ -75,7 +75,7 @@ body {
                 -webkit-transition: all .3s ease-in-out 0s;
                 transition: all .3s ease-in-out 0s;
             }
-    
+            
             &:active {
                 &:before {
                     -webkit-transform: scaleX(0.8);
@@ -87,13 +87,13 @@ body {
 }
 
 .container {
+    display: none;
     width: 30rem;
     height: 35rem;
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    // z-index: -2;
 }
 
 .main {
