--- a/tool-kits/sass/abstracts/_variables.scss
+++ b/tool-kits/sass/abstracts/_variables.scss
@@ -12,3 +12,8 @@ $dark-box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 $default-top-padding: 0.8rem;
 $default-side-padding: 2.4rem;
 $default-padding: $default-top-padding $default-side-padding;
+
+// COLOR
+$bgc-cards: rgb(169, 231, 255);
+$bgc-buttons: rgb(7, 91, 78);
+$bgc-navs: rgb(255, 225, 0);
