--- a/tool-kits/sass/components/_button.scss
+++ b/tool-kits/sass/components/_button.scss
@@ -7,8 +7,89 @@
     transform: translate(-50%, -50%);
     position: absolute;
     transition: all .3s;
+    cursor: pointer;
+    color: $bgc-buttons;
 
-    &--normal {
-        
+    &--normal, &--enlarge {
+        border-radius: 3rem;
+        border: none;
+        box-shadow: $default-box-shadow;
+
+        &:hover {
+            box-shadow: $dark-box-shadow;
+            transform: translate(-50%, -50%) translateY(-.4rem);
+        }
+
+        &:active {
+            box-shadow: $default-box-shadow;
+            transform: translate(-50%, -50%) translateY(-.25rem);
+        }
     }
+
+    &--enlarge::after {
+        content: "";
+        background-color: #fff;
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        border-radius: 3rem;
+        z-index: -1;
+        width: 100%;
+        height: 100%;
+        transition: all .8s cubic-bezier(.25,.8,.25,1);
+    }
+
+    &--enlarge:hover {
+        &::after {
+            transform: scale(1.8);
+            opacity: 0;
+        }
+    }
+
+    &--border {
+        border-radius: 3rem;
+        border: .2rem #fff solid;
+        background-color: transparent;
+        color: white;
+        transition: all .5s;
+
+        &:hover {
+            background-color: #fff;
+            color: $bgc-buttons;
+        }
+
+        &:active {
+            &::after {
+                content: "";
+                background-color: white;
+                // opacity: 0;
+                display: block;
+                position: absolute;
+                top: 0;
+                left: 0;
+                border-radius: 3rem;
+                z-index: -1;
+                width: 100%;
+                height: 100%;
+                transition: all .8s cubic-bezier(.25,.8,.25,1);
+                animation: expandBtn .5s ease-out;
+                animation-fill-mode: forwards;
+            }
+        }
+    }
+
+}
+
+
+@keyframes expandBtn {
+	0% {
+		opacity: 1;
+		transform: scale(1);
+	}
+
+	100% {
+		opacity: 0;
+		transform: scale(1.8);
+	}
 }
