--- a/tool-kits/css/style.css
+++ b/tool-kits/css/style.css
@@ -36,9 +36,10 @@ body {
   font-size: 2rem;
   transform: translate(-50%, -50%);
   position: absolute;
-  transition: all .3s;
   cursor: pointer;
-  color: #075b4e; }
+  color: #075b4e;
+  font-weight: 600;
+  transition: all 0.4s cubic-bezier(0.25, 0.8, 0.25, 1); }
   .btn--normal, .btn--enlarge {
     border-radius: 3rem;
     border: none;
@@ -60,7 +61,7 @@ body {
     z-index: -1;
     width: 100%;
     height: 100%;
-    transition: all 0.8s cubic-bezier(0.25, 0.8, 0.25, 1); }
+    transition: all 0.6s cubic-bezier(0.25, 0.8, 0.25, 1); }
   .btn--enlarge:hover::after {
     transform: scale(1.8);
     opacity: 0; }
@@ -68,8 +69,7 @@ body {
     border-radius: 3rem;
     border: .2rem #fff solid;
     background-color: transparent;
-    color: white;
-    transition: all .5s; }
+    color: white; }
     .btn--border:hover {
       background-color: #fff;
       color: #075b4e; }
@@ -84,8 +84,7 @@ body {
       z-index: -1;
       width: 100%;
       height: 100%;
-      transition: all 0.8s cubic-bezier(0.25, 0.8, 0.25, 1);
-      animation: expandBtn .5s ease-out;
+      animation: expandBtn .3s ease-out;
       animation-fill-mode: forwards; }
 
 @keyframes expandBtn {
