--- a/tool-kits/sass/components/_button.scss
+++ b/tool-kits/sass/components/_button.scss
@@ -6,9 +6,10 @@
     font-size: 2rem;
     transform: translate(-50%, -50%);
     position: absolute;
-    transition: all .3s;
     cursor: pointer;
     color: $bgc-buttons;
+    font-weight: 600;
+    transition: all .4s cubic-bezier(.25,.8,.25,1);
 
     &--normal, &--enlarge {
         border-radius: 3rem;
@@ -37,7 +38,7 @@
         z-index: -1;
         width: 100%;
         height: 100%;
-        transition: all .8s cubic-bezier(.25,.8,.25,1);
+        transition: all .6s cubic-bezier(.25,.8,.25,1);
     }
 
     &--enlarge:hover {
@@ -52,7 +53,6 @@
         border: .2rem #fff solid;
         background-color: transparent;
         color: white;
-        transition: all .5s;
 
         &:hover {
             background-color: #fff;
@@ -63,7 +63,6 @@
             &::after {
                 content: "";
                 background-color: white;
-                // opacity: 0;
                 display: block;
                 position: absolute;
                 top: 0;
@@ -72,8 +71,7 @@
                 z-index: -1;
                 width: 100%;
                 height: 100%;
-                transition: all .8s cubic-bezier(.25,.8,.25,1);
-                animation: expandBtn .5s ease-out;
+                animation: expandBtn .3s ease-out;
                 animation-fill-mode: forwards;
             }
         }
