--- a/tool-kits/sass/components/_button.scss
+++ b/tool-kits/sass/components/_button.scss
@@ -11,16 +11,19 @@
     font-weight: 600;
     transition: all .4s cubic-bezier(.25,.8,.25,1);
 
-    &--normal, &--enlarge {
+    &--normal, &--enlarge, &--email {
         border-radius: 3rem;
         border: none;
         box-shadow: $default-box-shadow;
+        //  background-color: #fff;
 
         &:hover {
             box-shadow: $dark-box-shadow;
             transform: translate(-50%, -50%) translateY(-.4rem);
         }
+    }
 
+    &--normal, &--enlarge {
         &:active {
             box-shadow: $default-box-shadow;
             transform: translate(-50%, -50%) translateY(-.25rem);
@@ -77,6 +80,39 @@
         }
     }
 
+    &--email {
+
+        &:active &__text {
+            opacity: 0;
+            // transform: scaleX(1.25);
+            transition: all .2s;
+        }
+
+        &:active {
+            box-shadow: $default-box-shadow;
+            // transform: translate(-50%, -50%) translateY(-.25rem) scaleX(0.8);
+            // transition: all .3s;
+
+            animation: transiteBtn .3s ease-out;
+            animation-fill-mode: forwards;
+
+            // &::after {
+            //     content: "";
+            //     background-color: white;
+            //     display: block;
+            //     position: absolute;
+            //     top: 0;
+            //     left: 0;
+            //     border-radius: 3rem;
+            //     width: 100%;
+            //     height: 100%;
+            //     box-shadow: $default-box-shadow;
+            //     // animation: transiteBtn .3s ease-out;
+            //     animation-fill-mode: forwards;
+            // }
+        }
+    }
+
 }
 
 
@@ -90,4 +126,21 @@
 		opacity: 0;
 		transform: scale(1.8);
 	}
+}
+
+@keyframes transiteBtn {
+    0% {
+        // opacity: 0;
+        transform: translate(-50%, -50%) scaleX(0.5);
+    }
+
+    50% {
+        // opacity: 0.5;
+        transform: translate(-50%, -50%) scaleX(1);
+    }
+
+    100% {
+        // opacity: 1;
+        transform: translate(-50%, -50%) scaleX(1.3);
+    }
 }
