--- a/tool-kits/sass/pages/_home.scss
+++ b/tool-kits/sass/pages/_home.scss
@@ -1,9 +1,3 @@
-body {
-    background-color: rgb(169, 231, 255);
-    // background-color: rgb(255, 225, 0);
-    // padding: 7rem;
-}
-
 .nav {
     position: relative;
     display: block;
@@ -95,6 +89,10 @@ body {
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
+
+    &--email__inner {
+        display: none;
+    }
 }
 
 .main {
